<resources>
    <string name="app_name">FK Cement</string>
    <string name="news_recyclerview_fragment">News RecyclerView fragment</string>
    <string name="playerslist_fragment">PlayersList Fragment</string>
    <string name="date">Date</string>
    <string name="article_title">Article Title</string>
    <string name="full_name">Puno ime:</string>
    <string name="club_name">Fudbalski Klub Cement</string>
    <string name="date_of_funding">Datum osnivanja:</string>
    <string name="funding_year">1913</string>
    <string name="adress">Adresa:</string>
    <string name="adress_nmb">Glavna 23, Beocin</string>
    <string name="nick_name">Plavo Beli</string>
    <string name="nickname">Nadimak:</string>
    <string name="stadium">Stadion:</string>
    <string name="stadium_name">Gradski Stadion Beocin</string>
    <string name="stadium_capacity">Kapacitet:</string>
    <string name="capacity_num">1500</string>
    <string name="league">Liga:</string>
    <string name="league_name">Srpska Liga Vojvodine</string>
    <string name="league_possition">Trenutna pozicija:</string>
    <string name="league_pos_current">6th</string>
    <string name="club_colors">Boje kluba:</string>
    <string name="club_contact">Kontakt:</string>
    <string name="home_theme_title">Home Colours Theme</string>
    <string name="away_theme_title">Away Colours Theme</string>
    <string name="third_theme_title">Third Colours Theme</string>
    <string name="change_app_theme">Change App Theme:</string>
    <string name="home_theme">Home Theme</string>
    <string name="open_tutorial">Open tutorial:</string>
    <string name="tutorial_text">Tutorial</string>
    <string name="info_bit_ns">Developed by BIT Novi Sad \u00a9 2018</string>
    <string name="info_about_developer_team">Info:</string>
    <string name="privacy_policy">Privacy policy owerview</string>
    <string name="no_internet_msg">No Internet Connection</string>
    <string name="intro_1">Get to know future champion of the Serbia!!!</string>
    <string name="intro_2">See your favorite players</string>
    <string name="intro_3">See the latest news ...</string>
    <string name="intro_4">Follow latest updates on team score table position.</string>
    <string name="intro_5">Pick Home colour theme of your application, when team playing on home ground.</string>
    <string name="intro_6">Pick Away colour theme for your application, when team play as guest.</string>
</resources>
