<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/homeFragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/imageLogo"
                android:layout_width="200dp"
                android:layout_height="210dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/fclogo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="250dp"
                android:background="@color/icons"
                android:elevation="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/full_name"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:layout_marginTop="10dp"
                        android:gravity="right"
                        android:text="@string/club_name"
                        android:textAlignment="gravity"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/nickname"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:gravity="right"
                        android:text="@string/nick_name"
                        android:textAlignment="gravity"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/date_of_funding"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:gravity="right"
                        android:text="@string/funding_year"
                        android:textAlignment="gravity"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/stadium"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:gravity="right"
                        android:text="@string/stadium_name"
                        android:textAlignment="gravity"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/adress"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:gravity="right"
                        android:text="@string/adress_nmb"
                        android:textAlignment="gravity"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/stadium_capacity"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:gravity="right"
                        android:text="@string/capacity_num"
                        android:textAlignment="gravity"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/league"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:gravity="right"
                        android:text="@string/league_name"
                        android:textAlignment="gravity"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/league_possition"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:gravity="right"
                        android:text="@string/league_pos_current"
                        android:textAlignment="gravity"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/club_colors"
                        android:textAlignment="center"
                        android:textSize="16sp" />
                </LinearLayout>

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/imageClubColors"
                    android:layout_width="300dp"
                    android:layout_height="160dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/club_colors" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/club_contact"
                        android:textAlignment="center"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <ImageButton
                        android:id="@+id/emailBtn"
                        android:layout_width="60dp"
                        android:layout_height="50dp"
                        android:adjustViewBounds="true"
                        android:background="@color/icons"
                        android:onClick="onClickSend"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_gmail" />

                    <ImageButton
                        android:id="@+id/facebookBtn"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="35dp"
                        android:layout_marginRight="40dp"
                        android:adjustViewBounds="true"
                        android:background="@color/icons"
                        android:onClick="onFbClick"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_facebook" />

                    <ImageButton
                        android:id="@+id/telephoneBtn"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:adjustViewBounds="true"
                        android:background="@color/icons"
                        android:onClick="onClickCall"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_phone" />

                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>